--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ task copyBundle(type: Copy) {
 allprojects {
     apply plugin: "eclipse"
 
-    version = '1.0-dev'
+    version = '1.0-beta'
     ext {
         appName = "Time Saver"
         gdxVersion = '1.9.11'
