--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ task copyBundle(type: Copy) {
 allprojects {
     apply plugin: "eclipse"
 
-    version = '1.0-beta1'
+    version = '1.0-beta.2'
     ext {
         appName = "Time Saver"
         gdxVersion = '1.9.11'
@@ -75,9 +75,11 @@ project(":desktop") {
 
     dependencies {
         implementation project(":core")
-        api "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
+        api "com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
-        api "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
+        api ("com.badlogicgames.gdx:gdx-tools:$gdxVersion") {
+            exclude group: 'com.badlogicgames.gdx', module: 'gdx-backend-lwjgl'
+        }
         
     }
 }
