--- a/build.gradle
+++ b/build.gradle
@@ -8,12 +8,13 @@ buildscript {
         google()
     }
     dependencies {
+        classpath 'org.wisepersist:gwt-gradle-plugin:1.0.9'
         classpath 'com.android.tools.build:gradle:3.4.1'
-        classpath "com.badlogicgames.gdx:gdx-tools:1.9.11"
+        classpath "com.badlogicgames.gdx:gdx-tools:1.9.12-SNAPSHOT"
     }
 }
 
-import com.badlogic.gdx.tools.texturepacker.TexturePacker;
+import com.badlogic.gdx.tools.texturepacker.TexturePacker
 
 task texturePacker {
     doLast {
@@ -44,13 +45,17 @@ task copyBundle(type: Copy) {
     rename ".+", "bundle.properties"
 }
 
+task generateResources {
+    dependsOn texturePacker, createProperties, copyBundle
+}
+
 allprojects {
     apply plugin: "eclipse"
 
-    version = '1.0-beta.2'
+    version = '1.0-beta.3'
     ext {
         appName = "Time Saver"
-        gdxVersion = '1.9.11'
+        gdxVersion = '1.9.12-SNAPSHOT'
         roboVMVersion = '2.3.10'
         box2DLightsVersion = '1.4'
         ashleyVersion = '1.7.0'
@@ -72,7 +77,6 @@ allprojects {
 project(":desktop") {
     apply plugin: "java-library"
 
-
     dependencies {
         implementation project(":core")
         api "com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion"
@@ -80,7 +84,6 @@ project(":desktop") {
         api ("com.badlogicgames.gdx:gdx-tools:$gdxVersion") {
             exclude group: 'com.badlogicgames.gdx', module: 'gdx-backend-lwjgl'
         }
-        
     }
 }
 
@@ -97,7 +100,19 @@ project(":android") {
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-arm64-v8a"
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-x86"
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-x86_64"
-        
+    }
+}
+
+project(":html") {
+    apply plugin: "java-library"
+    apply plugin: "gwt"
+    apply plugin: "war"
+
+    dependencies {
+        implementation project(":core")
+        api "com.badlogicgames.gdx:gdx-backend-gwt:$gdxVersion"
+        api "com.badlogicgames.gdx:gdx:$gdxVersion:sources"
+        api "com.badlogicgames.gdx:gdx-backend-gwt:$gdxVersion:sources"
     }
 }
 
@@ -106,9 +121,5 @@ project(":core") {
 
     dependencies {
         api "com.badlogicgames.gdx:gdx:$gdxVersion"
-    }
-
-    classes {
-        dependsOn texturePacker, createProperties, copyBundle
     }
 }
